# triton-inference-server-template

./: Dockerfile  README.md  pyproject.toml  triton-test.py
models/jina_clip_v2/: config.pbtxt
models/jina_clip_v2/1/: model.py
models/jina_embeddings_v4/: config.pbtxt
models/jina_embeddings_v4/1/: model.py
